<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_launch_camera"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/text_launch_camera"
        android:textColor="#000"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_launch_camera"
        android:scaleType="centerCrop"
        />



</androidx.constraintlayout.widget.ConstraintLayout>


